# Resource-Manager

./: .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md
cmake/: FindAssimp.cmake  FindEasyLoggingPP.cmake  FindFlac.cmake  FindJsonCpp.cmake  FindOgg.cmake  FindSTB.cmake  FindVorbis.cmake  IncludesList.cmake  MainSrcList.cmake  TestSrcList.cmake
example/loader/: ResourceManager.hpp  loader.project
example/project/: compile.config  core.package  core.project  index.project
example/project/data/: cordelia-image.object  cordelia-image.resource  duncan-material.object  duncan-material.resource  duncan-mesh.object  duncan-mesh.resource
example/project/data/fool/: intentionalConflict.object  secondIntentionalConflict.resource
example/project/data/fool/errors/: sisters.object  sisters.resource  three.object  three.resource
example/project/data/geometry/: Cube.blend  Cube.fbx  Geometry.resources
example/project/data/iago/: iago.model  iago.resource
example/project/data/images/: Images.resources
example/project/data/material/: duncan.material  iago.material
example/project/data/materials/: 128Rose.material  GrnJelly.material
example/project/data/mesh/: duncan.mesh
example/project/data/models/: Models.resources  RoseCube.model
example/project/data/shaderTest/: test.frag  test.vert  testShaders.resources
example/project/data/shaders/: Hello.frag  Hello.prog  Hello.vert  Shaders.resources
example/project/data/textTest/: helloworld.resource  helloworld.text  text.resource  utf8.txt
example/project/data/textTest/macbeth/: witches.canter  witches.resource
example/project/data/textures/: 128Rose.texture  GrnJelly.texture  Textures.resources
example/project/data/unknownTest/: Pinocho.resource
example/project/data/waveform/: OggVorbisTest.resources  Wonderland.flac
example2/project/: compile.config  core.project
example2/project/data/geometry/: Cube.blend  Cube.mtl  Geometry.resources
example2/project/data/images/: Images.resources
example2/project/data/materials/: 128Rose.material  Materials.resources
example2/project/data/models/: JellyCube.model  Models.resources
example2/project/data/shaders/: Hello.frag  Hello.prog  Hello.vert  Shaders.resources
example2/project/data/textures/: GrnJelly.texture  Textures.resources
source/: resman.workspace
source/loader/: MiscResource.cpp  MiscResource.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  TextResource.cpp  TextResource.hpp  loader.project  main.cpp
source/main/: Convert.hpp  ConvertFont.cpp  ConvertGenericJson.cpp  ConvertGeometry.cpp  ConvertGlsl.cpp  ConvertImage.cpp  ConvertMiscellaneous.cpp  ConvertWaveform.cpp  JsonUtil.cpp  JsonUtil.hpp  StreamWrite.cpp  StreamWrite.hpp  main.cpp  main.project
src/resman/: Main.cpp  StreamWrite.cpp
src/resman/logger/: Logger.cpp  Logger.hpp
src/resman/main/: Common.hpp  Convert.hpp  ConvertFont.cpp  ConvertGenericJson.cpp  ConvertGeometry.cpp  ConvertGlsl.cpp  ConvertImage.cpp  ConvertMiscellaneous.cpp  ConvertWaveform.cpp  Convert_bgfx_Shader.cpp  Expand.hpp  Expand_bgfx_Shader.cpp  JsonUtil.cpp  JsonUtil.hpp  StreamWrite.cpp  StreamWrite.hpp
tool/: Common.py  GenerateHeaderGuards.py  GenerateIncludesList.py  GenerateSrcLists.py  IncludeListBoilerplate.cmake  SrcListBoilerplate.cmake
